# partooth

./: CMakeLists.txt  README.md  adapter.cpp  adapter.h  adapter.ui  constants.h  controller.cpp  controller.h  dbus_types.h  device.cpp  device.h  device.ui  devicedialog.cpp  devicedialog.h  devicedialog.ui  deviceframe.cpp  deviceframe.h  deviceframe.ui  deviceframe_1.cpp  deviceframe_1.h  deviceframe_1.ui  devicelistmodel.cpp  devicelistmodel.h  devices.cpp  devices.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  org.bluez.Adapter1.cpp  org.bluez.Adapter1.h  org.bluez.Adapter1.xml  org.bluez.Device1.cpp  org.bluez.Device1.h  org.bluez.Device1.xml  org.freedesktop.DBus.ObjectManager.cpp  org.freedesktop.DBus.ObjectManager.h  org.freedesktop.DBus.ObjectManager.xml  org.freedesktop.DBus.Properties.cpp  org.freedesktop.DBus.Properties.h  (+8 more)
xml/: org.bluez.Adapter1.xml  org.bluez.Device1.xml  org.freedesktop.DBus.ObjectManager.xml  org.freedesktop.DBus.Properties.xml
